--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset=UTF-8 />
-    <meta name=description content="Free coming soon template">
-    <meta name=author content="Pawel Zuchowski">
+    <meta name=description content="Sacred Alpha">
+    <meta name=author content="Ayoub Hassan">
     <meta name=viewport content="width=device-width,initial-scale=1" />
     <meta http-equiv=X-UA-Compatible content="ie=edge" />
     <link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;700&display=swap" rel=stylesheet>
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <script src=https://kit.fontawesome.com/3c09bcb51a.js></script>
-    <title>Comming Soon</title>
+    <title>Sacred Alpha</title>
     <link href="styles/main.css" rel="stylesheet">
 </head>
 
@@ -31,21 +31,13 @@
             <div class="col-12 col-md-7 right">
                 <div class=mainInfo>
                     <h1>COMING SOON</h1>
-                    <p class=slogan>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime consequuntur
-                        delectus asperiores tempora autem laboriosam omnis. </p>
+                    <p class=slogan>Awaken the Sacred Alpha within. Guided meditations for men forging calm, power, and discipline. </p>
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
-                            required> <button type=submit>Subscribe</button> </form>
+                            required> <button type=submit>Subscription Launching Soon!</button> </form>
                 </div>
                 <ul class=icon-list>
-                    <li class=icon><a class=twitter href=google.com></a></li>
-                    <li class=icon><a class=linkedin href=google.com></a></li>
-                    <li class=icon><a class=facebook href=google.com></a></li>
-                    <li class=icon><a class=instagram href=google.com></a></li>
-                    <li class=icon><a class=youtube href=google.com></a></li>
-                    <li class=icon><a class=github href=google.com></a></li>
-                    <li class=icon><a class=stackoverflow href=google.com></a></li>
-                    <li class=icon><a class=medium href=google.com></a></li>
-                    
+                    <li class=icon><a class="instagram" href="https://www.instagram.com/sacredalphaofficial/" target="_blank"></a></li>
+                    <li class=icon><a class="youtube" href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank"></a></li>                    
                 </ul>
             </div>
         </div>
