--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <h1>COMING SOON</h1>
                     <p class=slogan>Awaken the Sacred Alpha within. Guided meditations for men forging calm, power, and discipline. </p>
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
-                            required> <button type=submit>Subscription Launching Soon!</button> </form>
+                            required> <button type=submit>Subscribe</button> </form>
                 </div>
                 <ul class=icon-list>
-                    <li class=icon><a class="instagram" href="https://www.instagram.com/sacredalphaofficial/" target="_blank"></a></li>
-                    <li class=icon><a class="youtube" href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank"></a></li>                    
+                    <li class=icon><a class=instagram href="https://www.instagram.com/sacredalphaofficial/" target="_blank"></a></li>
+                    <li class=icon><a class=youtube href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank"></a></li>                    
                 </ul>
             </div>
         </div>
