--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                             required> <button type=submit>Subscribe</button> </form>
                 </div>
                 <ul class=icon-list>
-                    <li class=icon><a class=instagram href="https://www.instagram.com/sacredalphaofficial/" target="_blank"></a></li>
-                    <li class=icon><a class=youtube href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank"></a></li>                    
+                    <li class=icon><a href="https://www.instagram.com/sacredalphaofficial/" target="_blank">
+    <i class="fa-brands fa-instagram"></i></a></li>
+                    <li class=icon><a href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank">
+    <i class="fa-brands fa-youtube"></i></a></li>                    
                 </ul>
             </div>
         </div>
