--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
             <div class="col-12 col-md-7 right">
                 <div class=mainInfo>
+                    <img src="img/logo.png" alt="Sacred Alpha" style="max-width:180px;margin-bottom:20px;">
                     <h1>COMING SOON</h1>
                     <p class=slogan>Awaken the Sacred Alpha within. Guided meditations for men forging calm, power, and discipline. </p>
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
