--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
                     <img src="img/logo.png" alt="Sacred Alpha" style="display:block;margin:0 auto 20px auto;max-width:180px;">
                     <h1>COMING SOON</h1>
                     <p class=slogan>Awaken the Sacred Alpha within. Guided meditations for men forging calm, power, and discipline. </p>
+                    <p class="slogan">
+Welcome to Sacred Alpha – where wisdom meets strength.<br><br>
+
+Sacred Alpha guides men through authentic transformation using timeless ancient philosophy combined with modern psychological insight. The work blends structured clarity from practical psychology with a compassionate understanding of what it means to be a man in today’s world.<br><br>
+
+Sacred Alpha is not about surface-level motivation or toxic masculinity. It is about becoming the strongest, most centered version of oneself through genuine inner work. The meditations are designed for men who are battling anxiety, seeking purpose, or ready to step into their full potential and create real change.<br><br>
+
+The content focuses on practical philosophy that can be applied immediately. It covers managing stress and anxiety, cultivating grounded confidence, building powerful morning routines, and engaging in deep healing work that addresses struggles at the root.<br><br>
+
+This space is for men who are done with quick fixes and ready for real transformation. Men who understand that true strength includes gentleness, that power grows from inner calm, and that the warrior’s path requires both courage and compassion.<br><br>
+
+Each meditation draws from Eastern wisdom traditions while addressing modern masculine challenges such as career pressure, relationships, purpose, and leadership.<br><br>
+
+Sacred Alpha exists to help men transform fear into power, awaken purpose, and become the strongest version of themselves.
+</p>
+
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
                             required> <button type=submit>Subscribe</button> </form>
                 </div>
