--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
             <div class="col-12 col-md-7 right">
                 <div class=mainInfo>
-                    <img src="img/logo.png" alt="Sacred Alpha" style="display:block;margin:0 auto 20px auto;max-width:180px;">
-                    <h1>SACRED ALPHA</h1>
+                    <img src="img/logo.png" alt="Sacred Alpha" style="display:block;margin:0 auto 20px auto;max-width:260px;width:100%;">
+                    <h1>COMING SOON!</h1>
                     <p class=slogan>Awaken the Sacred Alpha within. Guided meditations for men forging calm, power, and discipline. </p>
                     <p class="slogan">
 Welcome to Sacred Alpha – where wisdom meets strength.<br><br>
@@ -46,7 +46,7 @@ This space is for men who are done with quick fixes and ready for real transform
 
 Each meditation draws from Eastern wisdom traditions while addressing modern masculine challenges such as career pressure, relationships, purpose, and leadership.<br><br>
 
-Sacred Alpha exists to help men transform fear into power, awaken purpose, and become the strongest version of themselves. <br><br> COMING SOON!
+Sacred Alpha exists to help men transform fear into power, awaken purpose, and become the strongest version of themselves.
 </p>
 
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
