--- a/index.html
+++ b/index.html
@@ -17,43 +17,171 @@
     <link href="styles/main.css" rel="stylesheet">
 </head>
 
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #0b0b0b;
+  color: #ffffff;
+  line-height: 1.6;
+}
+
+.container {
+  max-width: 800px;
+  margin: auto;
+  padding: 80px 20px;
+}
+
+h1 {
+  font-size: 48px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 26px;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+p {
+  font-size: 18px;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+
+ul li {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.button {
+  display: inline-block;
+  margin-top: 30px;
+  padding: 14px 32px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.button:hover {
+  background: #ffffff;
+  color: #000000;
+}
+
+.footer {
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.7;
+  margin-top: 100px;
+}
+
+input {
+  padding: 12px;
+  width: 70%;
+  max-width: 300px;
+  border: none;
+  margin-top: 10px;
+}
+
+form {
+  text-align: center;
+}
+</style>
+</head>
+
 <body>
-    <div class=container>
-        <div class=row>
-            <div class="left-wrap col-12 col-md-5">
-                <div class=left>
-                    <p><span class=days></span><span class=small> days</span></p>
-                    <p><span class=hours></span><span class=small> hours</span></p>
-                    <p>&nbsp;&nbsp;<span class=minutes></span><span class=small> minutes</span></p>
-                    <p>&nbsp;&nbsp;<span class=seconds></span><span class=small> seconds</span></p>
-                </div>
-            </div>
-            <div class="col-12 col-md-7 right">
-                <div class=mainInfo>
-                    <img src="img/logo.png" alt="Sacred Alpha" style="display:block;margin:0 auto 20px auto;max-width:400px;width:100%;">
-                    <h1 style="font-size:64px;letter-spacing:2px;">COMING SOON</h1>
-                    <p class="slogan">
-Welcome to Sacred Alpha – where wisdom meets strength.<br><br>
 
-Sacred Alpha guides men through authentic transformation using timeless ancient philosophy combined with modern psychological insight. The work blends structured clarity from practical psychology with a compassionate understanding of what it means to be a man in today’s world. This space is for men who are done with quick fixes and ready for real transformation. Men who understand that true strength includes gentleness, that power grows from inner calm, and that the warrior’s path requires both courage and compassion.<br><br>
+<div class="container">
 
-Sacred Alpha exists to help men transform fear into power, awaken purpose, and become the strongest version of themselves.
+<!-- HERO -->
+<h1>Sacred Alpha</h1>
+<p>Guided inner work for men</p>
+<p>Mental discipline. Emotional mastery. Nervous system regulation.</p>
+<p><a class="button" href="#">Join the Waitlist</a></p>
+
+<!-- WHAT SACRED ALPHA IS -->
+<h2>What Sacred Alpha Is</h2>
+<p>
+Sacred Alpha is a guided audio platform for men who want grounded strength,
+emotional stability, and internal clarity.
+</p>
+<p>
+The work centers on training stillness, focus, and self-command through practical inner practices.
+</p>
+<p>
+This is not motivational content.<br>
+It is structured inner training.
 </p>
 
-                    <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
-                            required> <button type=submit>Subscribe</button> </form>
-                </div>
-                <ul class=icon-list>
-                    <li class=icon><a href="https://www.instagram.com/sacredalphaofficial/" target="_blank">
-    <i class="fa-brands fa-instagram"></i></a></li>
-                    <li class=icon><a href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank">
-    <i class="fa-brands fa-youtube"></i></a></li>                    
-                </ul>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript" src="scripts/bundle.js"></script>
- 
+<!-- WHAT YOU WILL FIND -->
+<h2>What You Will Find</h2>
+<ul>
+<li>Guided meditation sessions</li>
+<li>Nervous system regulation practices</li>
+<li>Emotional grounding exercises</li>
+<li>Mental discipline training</li>
+<li>Silent awareness sessions</li>
+</ul>
+
+<!-- WHO THIS IS FOR -->
+<h2>Who This Is For</h2>
+<ul>
+<li>Men who experience anxiety or internal pressure</li>
+<li>Men who want stronger emotional control</li>
+<li>Men seeking depth beyond surface motivation</li>
+<li>Men who value internal strength over external performance</li>
+</ul>
+
+<!-- SAMPLE TITLES -->
+<h2>Sample Session Titles</h2>
+<ul>
+<li>Grounding the Nervous System</li>
+<li>Entering Stillness</li>
+<li>Emotional Containment Practice</li>
+<li>Building Inner Authority</li>
+<li>Daily Centering Ritual</li>
+</ul>
+
+<!-- ABOUT -->
+<h2>About the Creator</h2>
+<p>
+Sacred Alpha is created by a practitioner focused on masculine inner work,
+integrating contemplative traditions with modern psychological understanding.
+</p>
+
+<!-- AVAILABILITY -->
+<h2>Availability</h2>
+<ul>
+<li>Insight Timer</li>
+<li>YouTube</li>
+<li>Website</li>
+</ul>
+
+<!-- EMAIL -->
+<h2>Stay Updated</h2>
+<form>
+<input type="email" placeholder="Enter your email">
+<br>
+<a class="button" href="#">Join Updates</a>
+</form>
+
+<!-- FOOTER -->
+<div class="footer">
+<p>Sacred Alpha</p>
+<p>Contact: support@sacredalpha.com</p>
+<p>© 2026 Sacred Alpha</p>
+</div>
+
+</div>
+
 </body>
 
 
