--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@ It is structured inner training.
 <li>Men seeking depth beyond surface motivation</li>
 <li>Men who value internal strength over external performance</li>
 </ul>
+
                     <form class=form-subscribe action=#> <input type=email class=form placeholder="Your email address"
                             required> <button type=submit>Subscribe</button> </form>
                 </div>
-                    
+                <ul class=icon-list>
                     <li class=icon><a href="https://www.instagram.com/sacredalphaofficial/" target="_blank">
     <i class="fa-brands fa-instagram"></i></a></li>
                     <li class=icon><a href="https://www.youtube.com/@SacredAlphaOfficial" target="_blank">
@@ -81,4 +82,6 @@ It is structured inner training.
     <script type="text/javascript" src="scripts/bundle.js"></script>
  
 </body>
+
+
 </html>
